Fixed start-up script.
git-svn-id: http://unused-160-33.aus.redhat.com/svn/penrose-server/trunk@626 04c32f3d-caf7-0310-9fe0-d49f5cee804d